syntax = "proto3";

package notification;

import "google/protobuf/timestamp.proto";

// request to send a message
message SendRequest {
    // one of the message types to send
    oneof msg {
        EmailMessage email = 2;
        SmsMessage sms = 3;
        InAppMessage in_app = 4;
    }
}

// response to a send request
message SendResponse {
    // unique identifier of the message
    string message_id = 1;
    // timestamp of when the message was sent
    google.protobuf.Timestamp timestamp= 2;
}

// email message to be sent
message EmailMessage {
    string message_id = 1;
    // subject of the email
    string subject = 2;
    // subject of the email
    string sender = 3;
    // subject of the email
    repeated string recipients = 4;
    // subject of the email
    string body = 5;
}

// sms message to be sent
message SmsMessage  {
    string message_id = 1;
    // sender of the sms
    string sender = 2;
    // recipients of the sms
    repeated string recipients = 3;
    // body of the sms
    string body = 4;
}

// in-app message to be sent
message InAppMessage {
    // device id of the device to send the in-app message
    string device_id = 1;
    // title of the in-app message
    string title = 2;
    // body of the in-app message
    string body = 3;
}
